# llm-monitoring

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: model.yaml  monitoring.yaml
dashboards/grafana/: llm_observatory_overview.json
dashboards/prometheus/: prometheus.yml
scripts/: run_drift_check.py
src/common/: settings.py
src/monitoring/: drift.py  log_store.py  metrics.py
src/serving/: app.py  client_vllm.py  schemas.py
tests/unit/: test_drift.py  test_health.py
